crates/core2/tests/snapshots/shimmer_test__shimmer__alt_global.snap
---
source: crates/core2/tests/shimmer_test.rs
expression: "read_shim(&shim, sandbox.path())"
---
#!/usr/bin/env bash
set -e
[ -n "$PROTO_DEBUG" ] && set -x



exec proto run primary --bin "other/bin/path" --  "$@" 


